# hex

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  ROADMAP.md  SECURITY.md  alembic.ini  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: bug-checker.md  docs-keeper.md  security-reviewer.md  test-reviewer.md
.claude/hooks/: notify.sh  post-edit-check.sh  pre-push-guard.sh
.github/ISSUE_TEMPLATE/: config.yml  service-request.yml
.github/workflows/: ci.yml
deploy/: docker-compose.yml
deploy/hex/: Dockerfile
docs/: ANDROID.md  ARCHITECTURE.md  BOOTSTRAP.md  BREAK_GLASS.md  DEPLOYMENT.md  FILE_ARCHITECTURE.md  GAME_SERVERS.md  LIFECYCLE.md  PROVIDER_CONTRACT.md  SECRETS.md  SECURITY_MODEL.md  SUPPLY_CHAIN.md  TESTING.md  THREAT_MODEL.md  TRANSPARENCY.md  WORKFLOW.md
docs/ci/: README.md  ci.yml.reference  release.yml.reference
docs/decisions/: 0001-authentik-is-identity-source-of-truth.md  0002-provider-contract-and-four-integration-modes.md  0003-lifecycle-arc-is-v1-scope.md  0004-security-and-supply-chain-are-core-mission.md  0006-transparency-and-no-phone-home.md  0007-testing-rigor-and-regression.md  0008-break-glass-local-access.md  0009-delivery-cadence-and-claude-code-gating.md  0010-authentik-bundled-and-first-run-bootstrap.md  0011-android-client.md  0012-no-gating-dark-patterns-and-quiet-attribution.md  0013-authentik-bundled-by-default-or-external.md  0014-rich-configurable-dashboard.md  0015-access-tiers-overrides-and-visibility.md
frontend/: .npmrc  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
scripts/: generate-env.sh  preflight.sh
src/hex/: config.py  serve.py
tests/: conftest.py  test_serve.py
tests/api/: test_boot.py  test_breakglass_listener.py  test_breakglass_login.py  test_guards.py  test_lifespan.py  test_recipient.py  test_spa.py
tests/audit/: test_audit_manager.py  test_signer.py
tests/authentik/: test_admin_client.py  test_management_client.py  test_orchestrator.py  test_runtime_config.py  test_verify.py  test_wiring_client.py
tests/breakglass/: conftest.py  test_condition.py  test_config.py  test_idp_health.py  test_lockout.py  (+4 more)
(+152 files in other folders)
