[project]
name = "hex"
version = "0.1.0"
description = "HEx — self-hosted access-orchestration and experience layer for a homelab."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "cryptography==49.0.0",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    # OIDC relying-party login (Slice 2): httpx is now a RUNTIME dep (discovery + token exchange);
    # pyjwt[crypto] validates ID tokens (RS256 + JWKS via PyJWKClient). cryptography backs both.
    "httpx>=0.27",
    "pyjwt[crypto]>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyright>=1.1.410",
    "aiosqlite==0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hex"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade, ASYNC, S bandit.
select = ["E", "W", "F", "I", "B", "UP", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
# asserts + hardcoded placeholder/secret literals are expected in tests
"tests/**" = ["S101", "S105", "S106", "S107"]
# _RULES carries long, unsplittable secret-generation command literals
"src/hex/secrets/validation.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src/hex", "tests"]

[tool.pyright]
# Mirrors what Pylance reports in-editor; runs in CI alongside mypy.
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
extraPaths = ["src"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=hex --cov-report=term-missing --cov-fail-under=80 --import-mode=importlib"

[tool.coverage.run]
source = ["hex"]
branch = true
# Async/SQLAlchemy run via greenlet+threads; without this, lines executed through the ASGI
# path are misattributed as missed (skews the security-critical gate).
concurrency = ["greenlet", "thread"]
